# pytorch-from-scratch

./: .gitignore  README.md  pyproject.toml
01_ResNet/: get_images.py  my_nn.py  my_nn_test.py  my_resnet.py  train_my_resnet.py
02_autograd/: my_nn.py  my_nn_test.py  my_tensor.py  my_tensor_test.py  train.py
scripts/p01_resnet/: .gitignore  train_resnet.py
scripts/p02_autograd/: train_mlp.py
scripts/p03_optimizers/: rosenbrocks_banana.py  train_image_memorizer.py  train_resnet_with_hyperparameters.py
src/pytorch_from_scratch/p01_ResNet/: __init__.py  architecture.md  get_images.py  my_resnet.py
src/pytorch_from_scratch/p01_ResNet/labels/: __init__.py
src/pytorch_from_scratch/p02_autograd/: get_images.py  my_nn.py  my_tensor.py
src/pytorch_from_scratch/p03_optimizers/: my_optimizers.py
tests/: test_p01_my_nn.py  test_p02_my_nn.py  test_p02_my_tensor.py
