[project]
name = "pytorch-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "jupyterlab>=4.4.0",
    "matplotlib>=3.10.1",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]
