[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytorch-from-scratch"
version = "0.1.0"
description = "Create pytorch from scratch, for educational purposes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "matplotlib>=3.10.1",
    "pooch>=1.8.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.11",
]

[project.optional-dependencies]

[dependency-groups]
dev = [
    "black[d]>=25",
]
test = [
    "pytest>=8.3.5",
]
jupyter = [
    "jupyterlab>=4.4.0",
    "ipywidgets>=8.1.7",
]

[tool.uv]
default-groups = ["dev", "test", "jupyter"]
